# project_webapp_flask

./: .gitignore  app.py  colors.sql  database.db  db_definition.sql  filters.py  forms.py  helpers.py  init_db.py  pyproject.toml
static/css/: style.css
templates/: base.html  color_all.html  color_form.html  color_random.html  index.html  swatch.html
